# asp-language-server

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml
client/: package.json
client/src/: extension.ts
docs/: linter.md  parser.md
examples/: large_test.lp  long_instance.lp  parsing-errors.lp  parsing-missing-errors.lp  quick_test.lp  quicksave  small_test.lp  test.lp  unsafe-new.lp  unsafe.lp
src/: diagnostics.rs  document.rs  main.rs  test_utils.rs  treeutils.rs
src/completion/: context_location.rs  keyword_competion.rs  mod.rs  predicate_completion.rs
src/diagnostics/: diagnostic_codes.rs  diagnostic_run_data.rs  error_codes.rs  expression_analysis.rs  mod.rs  statement_analysis.rs  tree_error_analysis.rs  tree_utils.rs
src/goto/: definition.rs  mod.rs  references.rs
src/semantics/: encoding_semantic.rs  error_semantic.rs  missing_semantic.rs  mod.rs  predicate_occurence_semantics.rs  predicate_semantics.rs  special_literal_semantic.rs  statement_semantic.rs  syntax.rs  term_semantic.rs
