[package]
name = "asp-language-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
ropey = "1.5.0"
serde_json = "1.0.78"
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = { version = "0.17.0"}
serde = { version = "1.0", features = ["derive"] }
dashmap = "5.3.4"
log = "0.4.14"
im-rc = "15.0.0"
tree-sitter = "0.20.6"
tree-sitter-clingo = "0.0.9"

[debug]
incremental = true
